Mengatur nav di side bar Part 2

--- a/dashboard.html
+++ b/dashboard.html
@@ -31,9 +31,30 @@
         </div>
     </nav>
 
-    <div class="row no-gutters">
+    <div class="row no-gutters mt-5">
       <!-- berisi side bar -->      
-      <div class="col-md-2"></div>
+      <div class="col-md-2 bg-dark">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kelas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Lomba</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pelatihan</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Produk</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Data User</a>
+          </li>
+        </ul>
+      </div>
       
       <!-- berisi template halaman admin -->
       <civ class="col-md-10"></civ>
