--- a/dashboard.html
+++ b/dashboard.html
@@ -33,25 +33,25 @@
 
     <div class="row no-gutters mt-5">
       <!-- berisi side bar -->      
-      <div class="col-md-2 bg-dark">
-        <ul class="nav flex-column">
+      <div class="col-md-2 bg-dark mt-2 pr-3 pt-4">
+        <ul class="nav flex-column ml-3 mb-5">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Dashboard</a>
+            <a class="nav-link active text-white" href="#"><i class="fas fa-tachometer-alt"></i>Dashboard</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kelas</a>
+            <a class="nav-link text-white" href="#"><i class="fas fa-chalkboard-teacher"></i>Kelas</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Lomba</a>
+            <a class="nav-link text-white" href="#"><i class="fab fa-battle-net"></i>Lomba</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pelatihan</a>
+            <a class="nav-link text-white" href="#"><i class="fas fa-chalkboard-teacher"></i>Pelatihan</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Produk</a>
+            <a class="nav-link text-white" href="#"><i class="fab fa-product-hunt"></i>Produk</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Data User</a>
+            <a class="nav-link text-white" href="#"><i class="fas fa-users-cog"></i>Data User</a><hr class="bg-secondary">
           </li>
         </ul>
       </div>
