--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="admin.css">
     <link rel="stylesheet" href="font-awesome/css/all.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <title>Halaman Akademik</title>
   </head>
   <body>
@@ -17,14 +18,14 @@
        <div class="container-fluid">
           <a class="navbar-brand" href="#">HALAMAN ADMIN KPM SURABAYA</a>
           <form class="d-flex">
-              <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control mr-1" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-light" type="submit">Search</button>
            
             <div class="container-fluid">
-                <h5>
-                    <i class="fas fa-envelope mr-6" data-toggle="tooltip" title="Surat Masuk"></i>
-                    <i class="fas fa-bell mr-6" data-toggle="tooltip" title="Notifikasi"></i>
-                    <i class="fas fa-sign-out-alt mr-6" data-toggle="tooltip" title="Sign Out"></i>
+                <h5 class="mr-1">
+                    <i class="fas fa-envelope mr-3" data-toggle="tooltip" title="Surat Masuk"></i>
+                    <i class="fas fa-bell mr-3" data-toggle="tooltip" title="Notifikasi"></i>
+                    <i class="fas fa-sign-out-alt mr-1" data-toggle="tooltip" title="Sign Out"></i>
                 </h5>
             </div>
           </form>
@@ -36,22 +37,22 @@
       <div class="col-md-2 bg-dark mt-2 pr-3 pt-4">
         <ul class="nav flex-column ml-3 mb-5">
           <li class="nav-item">
-            <a class="nav-link active text-white" href="#"><i class="fas fa-tachometer-alt"></i>Dashboard</a><hr class="bg-secondary">
+            <a class="nav-link active text-white" href="#"><i class="fas fa-tachometer-alt mr-2"></i>Dashboard</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#"><i class="fas fa-chalkboard-teacher"></i>Kelas</a><hr class="bg-secondary">
+            <a class="nav-link text-white" href="#"><i class="fas fa-chalkboard-teacher mr-2"></i>Kelas</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#"><i class="fab fa-battle-net"></i>Lomba</a><hr class="bg-secondary">
+            <a class="nav-link text-white" href="#"><i class="fab fa-battle-net mr-2"></i>Lomba</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#"><i class="fas fa-chalkboard-teacher"></i>Pelatihan</a><hr class="bg-secondary">
+            <a class="nav-link text-white" href="#"><i class="fas fa-chalkboard-teacher mr-2"></i>Pelatihan</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#"><i class="fab fa-product-hunt"></i>Produk</a><hr class="bg-secondary">
+            <a class="nav-link text-white" href="#"><i class="fab fa-product-hunt mr-2"></i>Produk</a><hr class="bg-secondary">
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#"><i class="fas fa-users-cog"></i>Data User</a><hr class="bg-secondary">
+            <a class="nav-link text-white" href="#"><i class="fas fa-users-cog mr-2"></i>Data User</a><hr class="bg-secondary">
           </li>
         </ul>
       </div>
@@ -65,7 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     -->
