Membuat halaman siswa halaman admin

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,10 +16,10 @@
     
     <nav class="navbar navbar-expand-lg navbar-light bg-success fixed-top">
        <div class="container-fluid">
-          <a class="navbar-brand text-center" href="#">HALAMAN ADMIN KPM SURABAYA</a>
+          <a class="navbar-brand text-center" href="#"><marquee>SELAMAT DATANG DIHALAMAN ADMIN KPM SURABAYA - IKHLAS TEGAS PUAS</marquee></a>
           <form class="d-flex">
               <input class="form-control mr-1" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-light mr-3" type="submit">Search</button>
+              <button class="btn btn-outline-light mr-2" type="submit">Search</button>
            
             <div class="d-flex">
                 <h5 class="d-flex flex-row">
@@ -72,6 +72,46 @@
       <!-- berisi template halaman admin -->
       <div class="col-md-10 p-5">
         <h3><i class="fas fa-tachometer-alt mr-2"></i>DASHBOARD</h3><hr>
+
+        <div class="d-flex align-content-around" style="width: 60rem;">
+
+          <div class="container">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title text-center">KELAS</h5>
+                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard"></i></h1>
+                <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
+                <p class="text-center"><a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title text-center">LOMBA</h5>
+                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fab fa-battle-net"></i></h1>
+                <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
+                <p class="text-center"><a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title text-center">PELATIHAN</h5>
+                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard-teacher"></i></i></h1>
+                <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
+                <p class="text-center"><a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a></p>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
