Menambahkan container PRODUK pada halaman dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -42,18 +42,18 @@
             <a class="nav-link active text-white" href="#"><i class="fas fa-tachometer-alt mr-2"></i>Dashboard</a><hr class="bg-secondary">
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link feat-btn text-white  d-flex justify-content-center"><i class="fas fa-chalkboard-teacher mr-2"></i>Kelas<span class="fas fa-caret-down first ml-2"></span></a><hr class="bg-secondary">
+            <a class="nav-link feat-btn text-white"><i class="fas fa-chalkboard-teacher mr-2"></i>Kelas<span class="fas fa-caret-down first ml-2"></span></a><hr class="bg-secondary">
             <ul class="feat-show">
-              <a class="nav-link text-white" href="#">Level</a>
-              <a class="nav-link text-white" href="#">Ruang Kelas</a>
-              <a class="nav-link text-white" href="#">Bank Soal</a>
+              <a class="nav-link text-white" href="#"><i class="far fa-dot-circle mr-1"></i>Level</a>
+              <a class="nav-link text-white" href="#"><i class="far fa-dot-circle mr-1"></i>Ruang Kelas</a>
+              <a class="nav-link text-white" href="#"><i class="far fa-dot-circle mr-1"></i>Bank Soal</a>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link serv-btn text-white"><i class="fab fa-battle-net mr-2"></i>Lomba<span class="fas fa-caret-down second ml-2"></span></a><hr class="bg-secondary">
             <ul class="serv-show">
-              <a class="nav-link text-white" href="#">Nasional</a>
-              <a class="nav-link text-white" href="#">Internasional</a>
+              <a class="nav-link text-white" href="#"><i class="far fa-dot-circle mr-1"></i>Nasional</a>
+              <a class="nav-link text-white" href="#"><i class="far fa-dot-circle mr-1"></i>Internasional</a>
             </ul>
           </li>
           <li class="nav-item">
@@ -73,7 +73,7 @@
       <div class="col-md-10 p-5">
         <h3><i class="fas fa-tachometer-alt mr-2"></i>DASHBOARD</h3><hr>
 
-        <div class="d-flex align-content-around" style="width: 60rem;">
+        <div class="d-flex align-content-around">
 
           <div class="container">
             <div class="card" style="width: 18rem;">
@@ -107,6 +107,20 @@
             <div class="card" style="width: 18rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">PELATIHAN</h5>
+                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard-teacher"></i></i></h1>
+                <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
+                <button type="button" class="btn btn-primary">
+                  Jumlah <span class="badge badge-light">9</span>
+                  <span class="sr-only">unread messages</span>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body d-flex flex-column justify-content-center">
+                <h5 class="card-title text-center">PRODUK</h5>
                 <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard-teacher"></i></i></h1>
                 <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
                 <button type="button" class="btn btn-primary">
