--- a/dashboard.html
+++ b/dashboard.html
@@ -72,10 +72,10 @@
       <!-- berisi template halaman admin -->
       <div class="col-md-10 p-5">
         <h3><i class="fas fa-tachometer-alt mr-2"></i>DASHBOARD</h3><hr>
+        <div class="container-fluid">
+        <div class="row align-content-around">
 
-        <div class="d-flex align-content-around">
-
-          <div class="container">
+          <div class="col container d-flex justify-content-center">
             <div class="card" style="width: 18rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">KELAS</h5>
@@ -89,7 +89,7 @@
             </div>
           </div>
 
-          <div class="container">
+          <div class="col container d-flex justify-content-center">
             <div class="card" style="width: 18rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">LOMBA</h5>
@@ -103,7 +103,9 @@
             </div>
           </div>
 
-          <div class="container">
+          <div class="w-100"></div>
+
+          <div class="col container d-flex justify-content-center pt-2">
             <div class="card" style="width: 18rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">PELATIHAN</h5>
@@ -117,7 +119,7 @@
             </div>
           </div>
 
-          <div class="container">
+          <div class="col container d-flex justify-content-center pt-2">
             <div class="card" style="width: 18rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">PRODUK</h5>
@@ -132,6 +134,7 @@
           </div>
 
         </div>
+       </div>
       </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
