Mengatur posisi button pada halaman dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -71,12 +71,12 @@
  
       <!-- berisi template halaman admin -->
       <div class="col-md-10 p-5">
-        <h3><i class="fas fa-tachometer-alt mr-2"></i>DASHBOARD</h3><hr>
-        <div class="container-fluid">
-        <div class="row align-content-around">
+        <h3><i class="fas fa-tachometer-alt mr-2"></i>NOTIFIKASI</h3><hr>
+        
+        <div class="d-flex align-content-around">
 
-          <div class="col container d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
+          <div class="container d-flex justify-content-center">
+            <div class="card" style="width: 16rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">KELAS</h5>
                 <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard"></i></h1>
@@ -89,8 +89,8 @@
             </div>
           </div>
 
-          <div class="col container d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
+          <div class="container d-flex justify-content-center">
+            <div class="card" style="width: 16rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">LOMBA</h5>
                 <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fab fa-battle-net"></i></h1>
@@ -103,10 +103,8 @@
             </div>
           </div>
 
-          <div class="w-100"></div>
-
-          <div class="col container d-flex justify-content-center pt-2">
-            <div class="card" style="width: 18rem;">
+          <div class="container d-flex justify-content-center">
+            <div class="card" style="width: 16rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">PELATIHAN</h5>
                 <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard-teacher"></i></i></h1>
@@ -119,14 +117,14 @@
             </div>
           </div>
 
-          <div class="col container d-flex justify-content-center pt-2">
-            <div class="card" style="width: 18rem;">
+          <div class="container d-flex justify-content-center">
+            <div class="card" style="width: 16rem;">
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">PRODUK</h5>
-                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard-teacher"></i></i></h1>
+                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fab fa-product-hunt"></i></h1>
                 <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
                 <button type="button" class="btn btn-primary">
-                  Jumlah <span class="badge badge-light">9</span>
+                  Jumlah <span class="badge badge-light">10</span>
                   <span class="sr-only">unread messages</span>
                 </button>
               </div>
@@ -134,7 +132,10 @@
           </div>
 
         </div>
-       </div>
+
+        <br>
+        <h3><i class="fas fa-tachometer-alt mr-2"></i>NOTIFIKASI</h3><hr>
+
       </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
