Part 2 - Memperbaiki tampilan di halaman siswa

--- a/halaman-siswa.html
+++ b/halaman-siswa.html
@@ -62,7 +62,7 @@
  
       <!-- berisi template halaman admin -->
       <div class="col-md-10 p-5" style="position: absolute;">
-        <h3></i>UPDATE INFORMASI</h3><hr>
+        <h3></i>UPDATE INFORMASI PENDAFTARAN KELAS</h3><hr>
         
         <div class="d-flex align-content-around">
 
@@ -71,9 +71,9 @@
               <div class="card-body d-flex flex-column justify-content-center">
                 <h5 class="card-title text-center">SKB Online</h5>
                 <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard"></i></h1>
-                <p class="card-text text-center">Seleksi Kelas Berbakat Online dibuka setiap satu tahun sekali.</p>
+                <p class="card-text text-center">SKB Online dibuka setiap satu tahun sekali.</p>
                 <button type="button" class="btn btn-primary">
-                  Lihat Selengkapnya <span class="badge badge-light">>></span>
+                  Info Detail <span class="badge badge-light">></span>
                   <span class="sr-only">unread messages</span>
                 </button>
               </div>
@@ -83,39 +83,11 @@
           <div class="container d-flex justify-content-center">
             <div class="card" style="width: 16rem;">
               <div class="card-body d-flex flex-column justify-content-center">
-                <h5 class="card-title text-center">LOMBA</h5>
+                <h5 class="card-title text-center">PSB</h5>
                 <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fab fa-battle-net"></i></h1>
-                <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
+                <p class="card-text text-center">Peneriamaan Siswa Baru KPM Surabaya dibuka setiap hari</p>
                 <button type="button" class="btn btn-primary">
-                  Jumlah <span class="badge badge-light">9</span>
-                  <span class="sr-only">unread messages</span>
-                </button>
-              </div>
-            </div>
-          </div>
-
-          <div class="container d-flex justify-content-center">
-            <div class="card" style="width: 16rem;">
-              <div class="card-body d-flex flex-column justify-content-center">
-                <h5 class="card-title text-center">PELATIHAN</h5>
-                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard-teacher"></i></i></h1>
-                <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
-                <button type="button" class="btn btn-primary">
-                  Jumlah <span class="badge badge-light">9</span>
-                  <span class="sr-only">unread messages</span>
-                </button>
-              </div>
-            </div>
-          </div>
-
-          <div class="container d-flex justify-content-center">
-            <div class="card" style="width: 16rem;">
-              <div class="card-body d-flex flex-column justify-content-center">
-                <h5 class="card-title text-center">PRODUK</h5>
-                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fab fa-product-hunt"></i></h1>
-                <p class="card-text text-center">Ada informasi update terbaru yang belum dieksekusi.</p>
-                <button type="button" class="btn btn-primary">
-                  Jumlah <span class="badge badge-light">10</span>
+                  Info Detail <span class="badge badge-light">></span>
                   <span class="sr-only">unread messages</span>
                 </button>
               </div>
@@ -125,8 +97,39 @@
         </div>
 
         <br>
-        <h3><i class="fas fa-tachometer-alt mr-2"></i>NOTIFIKASI</h3><hr>
+        <h3>UPDATE INFORMASI PENDAFTARAN LOMBA</h3><hr>
 
+        <div class="d-flex align-content-around">
+
+          <div class="container d-flex justify-content-center">
+            <div class="card" style="width: 16rem;">
+              <div class="card-body d-flex flex-column justify-content-center">
+                <h5 class="card-title text-center">KMNR</h5>
+                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fas fa-chalkboard-teacher"></i></i></h1>
+                <p class="card-text text-center">Informasi terkait Lomba KMNR silahkan klik tombol di bawah ini.</p>
+                <button type="button" class="btn btn-primary">
+                  Info detail <span class="badge badge-light">></span>
+                  <span class="sr-only">unread messages</span>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="container d-flex justify-content-center">
+            <div class="card" style="width: 16rem;">
+              <div class="card-body d-flex flex-column justify-content-center">
+                <h5 class="card-title text-center">IKMC</h5>
+                <h1 class="card-subtitle mb-2 text-center text-muted"><i class="fab fa-product-hunt"></i></h1>
+                <p class="card-text text-center">Informasi terkait Lomba IKMC silahkan klik tombol di bawah ini.</p>
+                <button type="button" class="btn btn-primary">
+                  Info Detail <span class="badge badge-light">></span>
+                  <span class="sr-only">unread messages</span>
+                </button>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
