Menambahkan perintah pendaftaran pada file pendaftaran-skb-online.html

--- a/pendaftaran-skb-online.html
+++ b/pendaftaran-skb-online.html
@@ -82,7 +82,7 @@
               <p class="text-justify">Adalah Kelas pembelajaran Matematika bagi Pemula. Kelas MNR menitik beratkan pada penguasaan Pemahaman konsep-konsep dasar Matematika dan Keterampilan hitung dasar (+, -, x & :) dengan menata kemampuan nalar siswa. Pada tingkatan kelas ini siswa dibimbing untuk mudah belajar Matematika dan Senang mengerjakan soal, sebab soal didesain mudah dikerjakan namun dilengkapi dengan variasi soal yang banyak. Siswa belajar dengan menggunakan modul/buku MNR yang telah disediakan oleh KPM.</p>
               <br>
               <br>
-              <p class="text-justify">Apabila anda tertarik Program-program yang kami tawarkan, silahkan klik tombol daftar berikut ini.</p>
+              <p class="text-justify">Apabila anda tertarik dengan program kelas yang kami tawarkan, silahkan daftar Seleksi Kelas Berbakat Online dengan klik tombol daftar berikut ini.</p>
               <a href="#" class="btn btn-primary">DAFTAR</a>
             </div>
             <div class="card-footer text-muted">
