Menambahkan list form pendaftaran

--- a/form-skbo.html
+++ b/form-skbo.html
@@ -62,33 +62,45 @@
  
       <!-- berisi template halaman admin -->
       <div class="col-md-10 p-5" style="position: absolute;">
-        <div class="card text-center">
-            <div class="card-header">
-              <h5>Seleksi Kelas Berbakat (SKB) - Online</h5>
+        <form>
+            <div class="form-group row">
+              <label for="staticEmail" class="col-sm-2 col-form-label">Nama</label>
+              <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="M. Rudi Firmansyah">
+              </div>
             </div>
-            <div class="card-body">
-                <p class="text-justify">Seleksi Kelas Berbakat Online adalah sebuah proses penjaringan siswa-siswa baru KPM Surabaya yang akan ditempatkan pada 3 level kelas. Kelas-kelas tersebut diantaranya:</p>
-              <br>
-              <p class="text-left"><b>1. BERBAKAT C</b></p>
-              <br>
-              <p class="text-justify">Adalah kelas pembalajaran Matematika yang dikhususkan untuk penggemar dan berbakat matematika. Kelas ini merupakan kelas khusus yang akan membekali siswa dalam mengikuti berbagai kompetisi atau lomba-lomba Matematika khususnya ditingkat Propinsi, Nasional dan Internasional. Kelas BERBAKAT ini dikelompokan dalam jenjang Berbakat C, Berbakat B dan Berbakat A. Berbakat A adalah tingkatan paling Tinggi. Pengelolaan kelas Berbakat diatur dengan semi kompetisi yaitu diawali dengan pemberian materi ajar setiap pekan selama 4 kali pertemuan. Disetiap pekan siswa diberikan soal pekanan untuk mengukur kemampuan daya serap siswa. Dan diakhir periode yaitu pekan ke-4 siswa wajib mengikuti Tes Eliminasi. Tes Eliminasi adalah tes yang diberikan kepada siswa untuk menciptakan kompetisi siswa sebab siswa yang nilainya diatas rata-rata akan direkomendasikan naik Grade dan sebaliknya siswa yang nilainya dibawah standar akan turun grade bahkan akan dieliminasi dari kelas Berbakat</p>
-              <br>
-              <p class="text-left"><b>2. PMNR</b></p>
-              <br>
-              <p class="text-justify">Adalah Kelas pembelajaran Matematika Pengembangan, yaitu kelas yang menitik beratkan pada membangun kemampuan berpikir Nalar dan Komunikasi sisiwa dalam Matematika. Pada tingkatan ini anak diharapkan sudah terbiasa memiliki kemampuan bernalar dalam memahami soal Matematika, sehingga akan dikembangkan dengan pemberian soal-soal tidak rutin (soal HOTS). Demikian pula dalam tingkatan ini siswa dilatih untuk mengkomunikasikan solusi atau penyelesaian soal dengan struktur yang teratur dan mudah dipahami alur penyajiannya. Pada kelas PMNR siswa juga diberikan soal-soal Tantangan berupa soal Pemecahan Masalah dan Eksplorasi. Kelas ini biasa dikenal dengan kelas Olimpiade Dasar. Siswa belajar menggunakan modul/buku PMNR dan buku Protofolio yang telah disediakan oleh KPM.</p>
-              <br>
-              <p class="text-left"><b>3. MNR</b></p>
-              <br>
-              <p class="text-justify">Adalah Kelas pembelajaran Matematika bagi Pemula. Kelas MNR menitik beratkan pada penguasaan Pemahaman konsep-konsep dasar Matematika dan Keterampilan hitung dasar (+, -, x & :) dengan menata kemampuan nalar siswa. Pada tingkatan kelas ini siswa dibimbing untuk mudah belajar Matematika dan Senang mengerjakan soal, sebab soal didesain mudah dikerjakan namun dilengkapi dengan variasi soal yang banyak. Siswa belajar dengan menggunakan modul/buku MNR yang telah disediakan oleh KPM.</p>
-              <br>
-              <br>
-              <p class="text-justify">Apabila anda tertarik dengan program kelas yang kami tawarkan, silahkan daftar Seleksi Kelas Berbakat Online dengan klik tombol daftar berikut ini.</p>
-              <a href="#" class="btn btn-primary">DAFTAR</a>
+            <div class="form-group row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Kelas</label>
+                <div class="col-sm-10">
+                  <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="5 (SD)">
+                </div>
             </div>
-            <div class="card-footer text-muted">
-              KPM Surabaya
+            <div class="form-group row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Asal Sekolah</label>
+                <div class="col-sm-10">
+                  <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="SD KPM SURABAYA">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Kota Asal Sekolah</label>
+                <div class="col-sm-10">
+                  <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="SURABAYA">
+                </div>
+              </div>
+              <div class="form-group row">
+                  <label for="staticEmail" class="col-sm-2 col-form-label">Email Aktif</label>
+                  <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="ujicoba@gmail.com">
+                  </div>
+              </div>
+            <div class="form-group row">
+              <label for="inputPassword" class="col-sm-2 col-form-label">No. WA Aktif</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="082233445566">
+              </div>
             </div>
-          </div>  
+            <button type="button" class="btn btn-primary">Daftar</button>
+          </form>
       </div>
         
     </div>
